# meal-planner

./: README.md  pyproject.toml
docs/plans/: 2026-02-08-scaled-recipes-in-plan-design.md
skill/: SKILL.md
src/meal_planner/: __init__.py  cli.py  config.py  haiku_parser.py  indexer.py  ingredient_groups.py  log.py  models.py  pins.py  planner.py  recipe_renderer.py  scaler.py  shopping.py  suggest.py
tests/: conftest.py  test_ingredient_groups.py  test_pins.py  test_planner_pins.py  test_recipe_renderer.py
